--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1115,7 +1115,6 @@ body:not(.native-scrollbars) ::-webkit-scrollbar-thumb:active {
 
 .tooltip.mod-left,
 .tooltip.mod-right {
-  transform: none;
   animation: none; }
 
 .tooltip.mod-error {
