--- a/src/scss/components/tooltips.scss
+++ b/src/scss/components/tooltips.scss
@@ -6,7 +6,6 @@
 }
 .tooltip.mod-left,
 .tooltip.mod-right {
-	transform:none;
 	animation:none; 
 }
 .tooltip.mod-error {
